[gd_scene load_steps=2 format=2]

[ext_resource path="res://ListNode.gd" type="Script" id=1]

[node name="ListNode" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
color = Color( 0.47451, 0.74902, 0.286275, 1 )

[node name="VisNotifier" type="VisibilityNotifier2D" parent="."]

[node name="Title" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
align = 1
valign = 1

[connection signal="screen_entered" from="VisNotifier" to="." method="_on_VisNotifier_screen_entered"]
[connection signal="screen_exited" from="VisNotifier" to="." method="_on_VisNotifier_screen_exited"]
